Install atm6 (#17)